--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,6 @@
-[workspace]
-members = [
-    "veclib-main"
-]
+[package]
+name = "veclib"
+version = "0.1.0"
+edition = "2018"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
